--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/input.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/input.vm
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="./css/style.css" type="text/css" />
-  <title>テスト</title>
+  <title>BeerGame</title>
   <script type="text/javascript" language="javascript">
     <!--
     function addGame(formObj) {
@@ -16,22 +16,20 @@
 #parse("web/errorList.vm")
   <form action="$link.setAction($currentPath)" method="post" id="hiddenForm">
   <input type="hidden" name="command" />
-  <div id="cnt">
-    <div id="header">
-      <h1>新規ゲームの設定</h1>
-    </div>
   <div id="main">
     <table border=4>
       <tr>
         <td>チーム名</td>
-        <td><input type="text" name="teamName" value="$!{currentForm.teamName}" /></td>
+        <td colspan=2><input type="text" name="teamName" value="$!{currentForm.teamName}" /></td>
       </tr>
       <tr>
         <td>オーナー名</td>
-        <td><input type="text" name="ownerName" value="$!{currentForm.ownerName}" /></td>
+        <td colspan=2><input type="text" name="ownerName" value="$!{currentForm.ownerName}" /></td>
       </tr>
       <tr>
-        <td colspan=2 align=center><input type="button" value="登録" onClick="javascript:addGame(this.form);" /></td>
+        <td></td>
+        <td><input type="button" value="登録" onClick="javascript:addGame(this.form);" /></td>
+        <td><input type="button" value="ｷｬﾝｾﾙ" onClick="javascript:addGame(this.form);" /></td>
       </tr>
     </table>
   </div>
