--- a/BeerGame/webapp/WEB-INF/velocity/web/playerEntry/top.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/playerEntry/top.vm
@@ -13,14 +13,15 @@
   </script>
 </head>
 <body>
+#parse("web/errorList.vm")
   <form action="$link.setAction($currentPath)" method="post" id="hiddenForm">
   <input type="hidden" name="command" />
   <div id="main">
-#parse("web/errorList.vm")
+    <h1>花京院、きさまこのゲームやり込んでいるなッ！</h1>
     <table border=4>
       <tr>
         <td>チーム名</td>
-        <td>
+        <td colspan=2>
           <select name="kamoku1">
 #foreach($game in $!currentForm.getWaitingGameList())
             <option value="$game.name">$game.name</option>
@@ -30,11 +31,11 @@
       </tr>
       <tr>
         <td>プレイヤ名</td>
-        <td><input type="text" name="playerName" value="$!{currentForm.playerName}" /></td>
+        <td colspan=2><input type="text" name="playerName" value="$!{currentForm.playerName}" /></td>
       </tr>
       <tr>
         <td>ロール</td>
-        <td>
+        <td colspan=2>
           <select name="kamoku1">
 #foreach($role in $!currentForm.getWaitingRoleList())
             <option value="$role.name">$role.name</option>
@@ -43,9 +44,28 @@
         </td>
       </tr>
       <tr>
-        <td colspan=2 align=center><input type="button" value="登録" onClick="javascript:entryPlayer(this.form);" /></td>
+        <td></td>
+        <td align=center><input type="button" value="登録" onClick="javascript:entryPlayer(this.form);" /></td>
+        <td align=center><input type="button" value="ｷｬﾝｾﾙ" onClick="location = '$link.setAction('/top')'" /></td>
       </tr>
     </table>
+<p>┃┌┬┐　 　 　 　 　 　 ┃　　　┏ ＮＥＸＴ┓<br />
+┃├┼┤┌┐　 　 　 　 ┃ 　　..┃┌┬┐┃<br />
+┃└┴┘├┤┌┬┬┬┨ 　　..┃├┼┤┃<br />
+┃┌┐┌┼┤├┼┴┴┨ 　　..┃└┴┘┃<br />
+┠┼┼┼┼┼┼┼┬┐┃　　　┗━━━┛<br />
+┠┼┼┼┼┼┼┼┼┤┃<br />
+┠┼┼┼┼┼┼┼┼┤┃ 　　　.　. .... ..: : :: :: ::: :::::: ::::<br />
+┠┼┼┼┼┼┼┼┼┤┃ 　　　　　　　 Λ＿Λ . . . .: : :<br />
+┠┼┼┼┼┼┼┼┼┤┃ 　　　　　 　/:彡ミ゛ヽ;）ー､　. ::<br />
+┠┼┼┼┼┼┼┼┼┤┃ 　　　　　 / :::/:: ヽ、ヽ、 ::i . .::<br />
+┠┼┼┼┼┼┼┼┼┤┃ 　　 　　 / :::/;;: 　 ヽ　ヽ ::ｌ　.<br />
+┠┼┼┼┼┼┼┼┼┤┃ ￣￣￣（_,ノ ￣￣￣ヽ､_ノ￣￣<br />
+┠┼┼┼┼┼┼┼┼┤┃<br />
+┠┼┼┼┼┼┼┼┼┤┃<br />
+┠┼┼┼┼┼┼┼┼┤┃<br />
+┠┼┼┼┼┼┼┼┼┤┃<br />
+┗┷┷┷┷┷┷┷┷┷┛</p>
   </div>
   </form>
 #parse("web/footer.vm")
