【作業報告】 プレイヤー登録用のFormクラスを、ゲーム登録用のFormクラスに統合。 画面遷移を変更。 ファイル名などを修正。 Schema定義を修正。
【問題点】
新規ゲームと既存ゲームのラジオボタン選択処理が未実装の為、ゲーム登録とプレイヤー登録が画面から選択できない。

--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/top.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/top.vm
@@ -22,7 +22,7 @@
         <td colspan=2><input type="radio" name="q1" value="はい">&nbsp;新規ゲームの設定</td>
       </tr>
       <tr>
-        <td colspan=2><input type="radio" name="q1" value="いいえ">&nbsp;既存ゲームに参加</td>
+        <td colspan=2><input type="radio" name="q1" value="はい">&nbsp;既存ゲームへ参加</td>
       </tr>
       <tr>
         <td align=center><input type="button" value="実行" onClick="javascript:makeGame(this.form);" /></td>
