--- a/BeerGame/webapp/WEB-INF/velocity/web/top.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/top.vm
@@ -8,8 +8,7 @@
   <div id="main">
     <h1>ビールゲーム</h1>
     <h2><a href="$link.setAction('/preGame').addQueryData('command','init')">ゲームを始めてみる？</a></h2>
-    <h2><a href="$link.setAction('/playerEntry').addQueryData('command','init')">プレイヤー登録してみる？</a></h2>
-　　 _,,....,,_　 ＿人人人人人人人人人人人人人人人＿ <br> 
+<p>　　 _,,....,,_　 ＿人人人人人人人人人人人人人人人＿ <br> 
 -''":::::::::::::｀''＞　　　ゆっくりしていってね！！！　　　＜ <br> 
 ヽ:::::::::::::::::::::￣^Ｙ^Ｙ^Ｙ^Ｙ^Ｙ^Ｙ^Ｙ^Ｙ^Ｙ^Ｙ^Ｙ^Ｙ^Ｙ^Ｙ^￣ <br> 
 　|::::::;ノ´￣＼:::::::::::＼_,. -‐ｧ　　　　　＿_　　 _____　　 ＿_____ <br> 
@@ -21,6 +20,6 @@ r-'ｧ'"´/　 /!　ﾊ 　ハ　 !　　iヾ_ﾉ　i　ｲ　iゝ、ｲ人レ／_ルヽｲ i　| <br>
 `! 　!/ﾚi'　(ﾋ_] 　　 　ﾋ_ﾝ ﾚ'i　ﾉ　　　!Y!""　 ,＿__, 　 "" 「 !ﾉ i　| <br> 
 ,'　 ﾉ 　 !'"　 　 ,＿__,　 "' i .ﾚ'　　　　L.',.　 　ヽ _ﾝ　　　　L」 ﾉ| .| <br> 
 　（　　,ﾊ　　　　ヽ _ﾝ　 　人! 　　　　 | ||ヽ、　　　　　　 ,ｲ| ||ｲ| / <br> 
-,.ﾍ,）､　　）＞,､ _____,　,.イ　 ハ　　　　レ ル｀ ー--─ ´ルﾚ　ﾚ´ <br> 
+,.ﾍ,）､　　）＞,､ _____,　,.イ　 ハ　　　　レ ル｀ ー--─ ´ルﾚ　ﾚ´ </p>
   </div>
 #parse("web/footer.vm")
