--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/wait.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/wait.vm
@@ -17,14 +17,14 @@
   <form action="$link.setAction($currentPath)" method="post" id="hiddenForm">
   <input type="hidden" name="command" />
   <div id="main">
-    <h1>‘Ò‹@‰æ–ÊHƒQ[ƒ€‰æ–ÊH‚Å‚àA‚Ü‚¾–¢Š®¬‚È‚Ì™</h1>
-<p>@@@@@@@/Æ‚xÆR<br />
-@ @(R@ @/i ß )( ß jR@@@/)<br />
-@@(((i ) ^::::ÜMLÜ::::_ @( i)))@@‚Å‚Á‚Ä‚¢‚¤‚—‚—‚—‚—‚—‚—‚—‚—‚—‚—‚—‚—‚—‚—‚—<br />
-@^Ú_|@,-jQQQi-C|QT _<br />
-( QQQ¤@@|-„¦-|@@@@,QQ j<br />
-@@@@|@@@@`['L@@ /L<br />
-@@@@|@@@@@@@@@/</p>
+    <h1>å¾…æ©Ÿç”»é¢ï¼Ÿã‚²ãƒ¼ãƒ ç”»é¢ï¼Ÿã§ã‚‚ã€ã¾ã æœªå®Œæˆãªã®â˜†</h1>
+<p>ã€€ã€€ã€€ã€€ã€€ã€€ã€€/ï¾†ï¼¹ï¾†ãƒ½<br />
+ã€€ ã€€(ãƒ½ã€€ ã€€/ï¼ˆ ï¾Ÿ )( ï¾Ÿ ï¼‰ãƒ½ã€€ã€€ã€€/)<br />
+ã€€ã€€(((i ) ï¼::::âŒ’ï½€Â´âŒ’::::ï¼¼ ã€€( i)))ã€€ã€€ã§ã£ã¦ã„ã†ï½—ï½—ï½—ï½—ï½—ï½—ï½—ï½—ï½—ï½—ï½—ï½—ï½—ï½—ï½—<br />
+ã€€ï¼âˆ _|ã€€,-ï¼‰ï¼¿ï¼¿ï¼¿ï¼ˆ-ï¼Œ|ï¼¿ã‚ ï¼¼<br />
+( ï¼¿ï¼¿ï¼¿ï½¤ã€€ã€€|-â”¬-|ã€€ã€€ã€€ã€€,ï¼¿ï¼¿ ï¼‰<br />
+ã€€ã€€ã€€ã€€|ã€€ã€€ã€€ã€€`ãƒ¼'Â´ã€€ã€€ /Â´<br />
+ã€€ã€€ã€€ã€€|ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€/</p>
   </div>
   </form>
 #parse("web/footer.vm")
