--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/player.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/player.vm
@@ -26,14 +26,14 @@
 #parse("web/errorList.vm")
   <form action="$link.setAction($currentPath)" method="post" id="hiddenForm">
   <input type="hidden" name="command" />
-  <input type="hidden" name="gameId" />
+  <!--input type="hidden" name="gameId" /-->
   <div id="main">
     <h1>花京院、きさまこのゲームやり込んでいるなッ！</h1>
     <table border=4>
       <tr>
         <td>チーム名</td>
         <td colspan=2>
-          <select name="games" onChange="selectGame(this.form);">
+          <select name="gameId" onChange="selectGame(this.form);">
 #foreach($game in $!currentForm.getWaitingGameList())
             <option value="$game.id">$game.name</option>
 #end
@@ -47,6 +47,12 @@
       <tr>
         <td>ロール</td>
         <td colspan=2>
+          <select name="roleName">
+            <option value="小売り">小売り</option>
+            <option value="卸１">卸１</option>
+            <option value="卸２">卸２</option>
+            <option value="メーカ">メーカ</option>
+          </select>
           <select name="roles">
 #foreach($role in $!currentForm.getWaitingRoleList())
             <option value="$role.id">$role.name</option>
