--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/wait.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/wait.vm
@@ -5,8 +5,8 @@
   <title>BeerGame</title>
   <script type="text/javascript" language="javascript">
     <!--
-    function makeGame(formObj) {
-      formObj.command.value='makeGame';
+    function isEnableToStartGame(formObj) {
+      formObj.command.value='isEnableToStartGame';
       formObj.submit();
     }
     -->
@@ -18,6 +18,11 @@
   <input type="hidden" name="command" />
   <div id="main">
     <h1>待機画面？ゲーム画面？でも、まだ未完成なの☆</h1>
+
+
+ <td align=center><input type="button" value="次へ" onClick="javascript:isEnableToStartGame(this.form);" /></td>
+
+
 <p>　　　　　　　/ﾆＹﾆヽ<br />
 　 　(ヽ　 　/（ ﾟ )( ﾟ ）ヽ　　　/)<br />
 　　(((i ) ／::::⌒｀´⌒::::＼ 　( i)))　　でっていうｗｗｗｗｗｗｗｗｗｗｗｗｗｗｗ<br />
