作業内容　（10/31 中原、森下） ・発注画面の作成 　発注数を入力すると、取引記録が永続化され、次の週の入荷・受注・出荷が永続化される。
これからの作業
・画面に受注・入荷・出荷の総量を表示すること

--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/player.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/player.vm
@@ -53,11 +53,11 @@
             <option value="卸２">卸２</option>
             <option value="メーカ">メーカ</option>
           </select>
-          <select name="roles">
-#foreach($role in $!currentForm.getWaitingRoleList())
+          <!-- select name="roles">
+##foreach($role in $!currentForm.getWaitingRoleList())
             <option value="$role.id">$role.name</option>
-#end
-          </select>
+##end
+          </select-->
         </td>
       </tr>
       <tr>
