--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/input.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/input.vm
@@ -21,6 +21,7 @@
   <form action="$link.setAction($currentPath)" method="post" id="hiddenForm">
   <input type="hidden" name="command" />
   <div id="main">
+    <h2>BeerGame</h2>
     <table border=4>
       <tr>
         <td>チーム名</td>
@@ -36,17 +37,6 @@
         <td align=center><input type="button" value="ｷｬﾝｾﾙ" onClick="javascript:init(this.form);" /></td>
       </tr>
     </table>
-<p>　　　　　　　 ＿＿＿<br />
-　 　 　 　 ／　　　　　＼　　　　　ああああ！！<br />
-　　　　 ／ u　::::＼:::／:: ＼　　　名前が決まらないお！！<br />
-　　　／　 　 &lt;○>::::::&lt;○> ＼<br />
-　 　 |　　u　 　 （__人__）　u　|　　　　_＿＿＿＿＿＿＿＿＿_<br />
-　　　＼　 　 　 ｡｀ ⌒ﾟ:j´　,／　jﾞ~~| | |　　　　　　　　　　　　　|<br />
-＿＿／　　　　　　　　　　＼　 |_＿| | |　　　　　　　　　　　　　|<br />
-| |　/　　 ,　 　 　 　 　 　 　 ＼ｎ||　 | |　　　　　　　　　　　　　|<br />
-| | /　　 /　　　　　　　　　r.　 （ こ） | |　　　　　　　　　　　　　|<br />
-| | |　⌒ ーnｎｎ 　 　 　 　|＼ (⊆ｿ .|_|_＿＿＿＿_＿＿＿＿_|<br />
-￣ ＼＿_､("二）￣￣￣￣￣ｌ二二ｌ二二　 ＿|_|＿_|＿</p>
   </div>
   </form>
 #parse("web/footer.vm")
