--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/wait.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/wait.vm
@@ -17,19 +17,8 @@
   <form action="$link.setAction($currentPath)" method="post" id="hiddenForm">
   <input type="hidden" name="command" />
   <div id="main">
-    <h1>待機画面？ゲーム画面？でも、まだ未完成なの☆</h1>
-
-
+    <p>次へボタンを押して、プレイヤーが4人そろうまでお待ちください</p>
  <td align=center><input type="button" value="次へ" onClick="javascript:isEnableToStartGame(this.form);" /></td>
-
-
-<p>　　　　　　　/ﾆＹﾆヽ<br />
-　 　(ヽ　 　/（ ﾟ )( ﾟ ）ヽ　　　/)<br />
-　　(((i ) ／::::⌒｀´⌒::::＼ 　( i)))　　でっていうｗｗｗｗｗｗｗｗｗｗｗｗｗｗｗ<br />
-　／∠_|　,-）＿＿＿（-，|＿ゝ ＼<br />
-( ＿＿＿､　　|-┬-|　　　　,＿＿ ）<br />
-　　　　|　　　　`ー'´　　 /´<br />
-　　　　|　　　　　　　　　/</p>
   </div>
   </form>
 #parse("web/footer.vm")
