--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/player.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/player.vm
@@ -15,7 +15,7 @@
     }
     function selectGame(formObj) {
       var f = document.getElementById("hiddenForm");
-      formObj.gameId.value = f.games.selectedIndex;
+      formObj.gameId.value = f.gameId.selectedIndex;
       formObj.command.value='selectGame';
       formObj.submit();
     }
@@ -26,7 +26,6 @@
 #parse("web/errorList.vm")
   <form action="$link.setAction($currentPath)" method="post" id="hiddenForm">
   <input type="hidden" name="command" />
-  <!--input type="hidden" name="gameId" /-->
   <div id="main">
     <h2>BeerGame</h2>
     <table border=4>
@@ -36,9 +35,9 @@
           <select name="gameId" onChange="selectGame(this.form);">
 #foreach($game in $!currentForm.getWaitingGameList())
 #if($game.id == $currentForm.gameId)
-               <option value="$game.id" selected="selected">$game.name</option>
+               <option value="$game.id" selected="selected">$!{game.name}</option>
 #else
-               <option value="$game.id">$game.name</option>
+               <option value="$game.id">$!{game.name}</option>
 #end
 #end
           </select>
@@ -52,16 +51,10 @@
         <td>ロール</td>
         <td colspan=2>
           <select name="roleName">
-            <option value="小売り">小売り</option>
-            <option value="卸１">卸１</option>
-            <option value="卸２">卸２</option>
-            <option value="メーカ">メーカ</option>
+#foreach($role in $!currentForm.getWaitingRoleList())
+            <option value="$role.name()">$!{role.name()}</option>
+#end
           </select>
-          <!-- select name="roles">
-##foreach($role in $!currentForm.getWaitingRoleList())
-            <option value="$role.id">$role.name</option>
-##end
-          </select-->
         </td>
       </tr>
       <tr>
