【Done】 ・ActiveMQでキューの一意性を確保できるようにしました。 ・発注数などをDBから取得している処理を、MQから取得するように修正しました。 ・ゲーム選択画面で、ゲームが選択されたらロールを取得する処理を修正しました。
【ToDo】
・一週目のテストがおかくしなったので、コメントアウトしました。画面からも注文が動きません。
・ブラウザを閉じても、ゲームに戻れるようにすること。

--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/player.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/player.vm
@@ -15,7 +15,7 @@
     }
     function selectGame(formObj) {
       var f = document.getElementById("hiddenForm");
-      formObj.gameId.value = f.gameId.selectedIndex;
+      formObj.gameId.value = f.gameId.options[f.gameId.selectedIndex].value;
       formObj.command.value='selectGame';
       formObj.submit();
     }
