<作業内容>　森下 ・ログイン画面の作成 　（チーム名とロール名からログインする流れになっています。） 　（ＴＯＰ画面からリンクを作成しました。） 　（チーム名：Enable　がロールが揃っているのでログインできます）
＜残作業（エラー）＞
・ブラウザを４つ立ち上げて、それぞれのロールで立ち上げてゲームを実施してみたら
メーカだけエラーが発生しました。
原因はメーカのgetQuqueName()のときに、メーカーのパーティを取得する際にgetUpper()をしていて
メーカに上流がないので例外処理が発生してしまっています。
対応に困ったので、具体的な修正はできていません。


・Ｒｏｌｅの８０行目の
TextMessage ret = (TextMessage)receiver.receive(10);
の引数になっているタイムアウトを６０００ぐらいにしないと画面からの入力時間に間に合わないので修正する必要がある。
（あんまり長くしすぎるとテストの時間が長くなる）

--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/start.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/start.vm
@@ -1,4 +1,4 @@
-#parse("web/header.vm")
+﻿#parse("web/header.vm")
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="./css/style.css" type="text/css" />
@@ -19,7 +19,7 @@
   <input type="hidden" name="command" />
   <div id="main">
     <h1>ビールゲーム</h1>
-    <p>ゲーム名：$form.game.name  第 $form.role.getWeek("発注") 週  プレイヤ：$form.playerName</p>
+    <p>ゲーム名：$form.game.name  第 $form.role.getWeek("発注") 週  ロール：$form.role.name プレイヤ：$form.role.player.name</p>
   <table border=2>
     <tr>
       <td>入荷</td>
