--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/top.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/top.vm
@@ -1,4 +1,4 @@
-#parse("web/header.vm")
+﻿#parse("web/header.vm")
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="./css/style.css" type="text/css" />
