--- a/BeerGame/webapp/WEB-INF/velocity/web/top.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/top.vm
@@ -1,4 +1,4 @@
-#parse("web/header.vm")
+﻿#parse("web/header.vm")
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="./css/style.css" type="text/css" />
@@ -9,5 +9,6 @@
     <h1>ビールゲーム</h1>
     <h2><a href="$link.setAction('/preGame').addQueryData('command','init')">ゲームを開始する</a></h2>
     <h2><a href="$link.setAction('/viewStock').addQueryData('command','init')">残高の確認</a></h2>
+    <h2><a href="$link.setAction('/preGame').addQueryData('command','login')">ログイン</a></h2>
   </div>
 #parse("web/footer.vm")
