Issue 8:  	 タスク：出荷量の計算を実装する ・1週目の画面表示のときに、入荷トランザクションも作成するようにしました。 ・全体的にリファクタリングしました。 ※beans-domain.xmlを修正したので、makeConfigを叩いて下さい。

--- a/BeerGame/conf/template/beans-domain.xml
+++ b/BeerGame/conf/template/beans-domain.xml
@@ -40,4 +40,16 @@ velocimacro.library = @velocity.macro@
   <bean id="roleJudge" class="jp.rough_diamond.framework.user.SimpleRoleJudge">
     <description>アクセス制御</description>
   </bean>
+  <bean id="initStockAmount" class="java.lang.Long">
+    <description>初期在庫量</description>
+    <constructor-arg index="0" type="java.lang.String"><value>12</value></constructor-arg>
+  </bean>
+  <bean id="initInboundAmount" class="java.lang.Long">
+    <description>初期入荷量</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
+  <bean id="initAcceptOrderAmount" class="java.lang.Long">
+    <description>初期受注量</description>
+    <constructor-arg index="0" type="java.lang.String"><value>4</value></constructor-arg>
+  </bean>
 </beans>
