--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/start.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/start.vm
@@ -42,5 +42,18 @@
   <p>発注数&nbsp<input type="text" name="order" />
   <input type="button" value="注文" onClick="javascript:orderQuantity(this.form);" /></p>
  </div>
+
+     <h1>取引表示</h1>
+　　<table border=1>
+#foreach($week in $!form.getDebagView())
+     <tr>
+#foreach($tran in $!week)
+        <td>
+            <option value="$role.name">$tran.transactionType $tran.amount</option>
+        </td>
+         #end
+    </tr>
+　　#end
+    </table>　
   </form>
 #parse("web/footer.vm")
