【Done】 ・テストデータを堀さんのシナリオに合わせて修正しました。 　→ゲームは１つだけ、４週目の発注前まで作ってあります。 　→データがないため、コメントアウトしたテストが多数あります。 ・getWeekを最終週取得の意味を込めて、getLastWeekに変えました。 ・ログインしたときに、ゲームがすでに始まっている場合も、画面表示を行うように実装した。 ・login.vmで、チーム名が正しく表示できていなかったのを修正しました。
【ToDo】
・コメントアウトしたテストを実装しなおすこと！

--- a/BeerGame/webapp/WEB-INF/velocity/web/preGame/login.vm
+++ b/BeerGame/webapp/WEB-INF/velocity/web/preGame/login.vm
@@ -27,7 +27,7 @@
       <tr>
         <td>チーム名 </td>
         <td colspan=2>
-          <select name="gameId" ">
+          <select name="gameId">
 #foreach($game in $!currentForm.getGameAll())
                <option value="$game.id">$!{game.name}</option>
 #end
